--- a/hw/misc/Makefile.objs
+++ b/hw/misc/Makefile.objs
@@ -38,5 +38,6 @@ obj-$(CONFIG_OMAP) += omap_sdrc.o
 obj-$(CONFIG_OMAP) += omap_tap.o
 obj-$(CONFIG_SLAVIO) += slavio_misc.o
 obj-$(CONFIG_ZYNQ) += zynq_slcr.o
-
+obj-$(CONFIG_LPC213X) += arm_lpc213x_sysctl.o
+#obj-$(CONFIG_LPC213X) += arm_lpc213x_iap.o
 obj-$(CONFIG_PVPANIC) += pvpanic.o
